# IRIU_DataHub

./: .gitignore  README.md
dev/: .gitignore
dev/ckan/: Dockerfile  Dockerfile.dev
dev/ckan/docker-entrypoint.d/: 02_install_iriu_theme.sh
dev/src/ckanext-iriu-theme/: MANIFEST.in  README.md  pyproject.toml  setup.py
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/: __init__.py  plugin.py
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/fanstatic/: iriu-theme.css  webassets.yml
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/i18n/: ckanext-iriu_theme.pot
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/i18n/fr/LC_MESSAGES/: ckanext-iriu_theme.mo  ckanext-iriu_theme.po
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/templates/: base.html  footer.html  header.html
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/templates/home/: about.html  api.html  index.html
dev/src/ckanext-iriu-theme/ckanext/iriu_theme/templates/snippets/: tag_cloud.html
prod/: docker-compose.override.yml
